VR: bring back floor gradients

When optimizing the grid gradient in crrev.com/c/1065574, some
background colors where lost. Here we recover them by adding a backing
gradient rect.

BUG=859999

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:linux_vr;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I47169c6954bc7662f1ea9a3006f7ae30ebe1ec4e
Reviewed-on: https://chromium-review.googlesource.com/1125094
Reviewed-by: Christopher Grant <cjgrant@chromium.org>
Commit-Queue: Aldo Culquicondor <acondor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572858}
Former-commit-id: 3c9c6944d48ccde63af68d146dec9cb9542021de